--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -48,66 +48,13 @@ table {
 }
 
 
+/* header bar */
+
 .header-bar {
   position: fixed;
   height: 56px;
   width: 100%;
   background-color: green;
-}
-
-.left-column {
-  margin-top: 56px;
-  width: 67%;
-  height: 100%;
-  min-height: 1032px;
-  background-color: blue;
-  float: left;
-}
-
-.right-column {
-  margin-top: 56px;
-  width: 33%;
-  min-height: 1032px;
-  background-color: red;
-  float: right;
-}
-
-.video-display {
-  width: 100%;
-  height: 482px;
-  background-color: orange;
-}
-
-.creator-info {
-  width: 100%;
-  height: 185px;
-  background-color: purple;
-}
-
-.comments {
-  width: 100%;
-  height: 365px;
-  background-color: yellow;
-}
-
-.suggest-head {
-  width: 100%;
-  height: 60px;
-  background-color: fuchsia;
-}
-
-.thumbnails {
-  width: 50%;
-  height: 940px;
-  background-color: teal;
-  float: left;
-}
-
-.thumb-descrips {
-  width: 50%;
-  height: 940px;
-  background-color: navy;
-  float: right;
 }
 
 .left-header-buttons {
@@ -146,6 +93,35 @@ table {
   background-color: palegreen;
 }
 
+/* left column */
+
+.left-column {
+  margin-top: 56px;
+  width: 67%;
+  height: 100%;
+  min-height: 1300px;
+  background-color: blue;
+  float: left;
+}
+
+.video-display {
+  width: 100%;
+  height: 482px;
+  background-color: orange;
+}
+
+.creator-info {
+  width: 100%;
+  height: 185px;
+  background-color: purple;
+}
+
+.comments {
+  width: 100%;
+  height: 637px;
+  background-color: yellow;
+}
+
 .video-player {
   margin-left: 24px;
   padding-top: 24px;
@@ -171,6 +147,93 @@ table {
   margin-left: 24px;
   padding-top: 25px;
   width: 641px;
-  height: 124px;
+  height: 99px;
   background-color: darkred;
+}
+
+.comment-interface{
+  width: 641px;
+  padding: 24px 0 32px;
+  margin-left: 24px;
+  height: 87px;
+  background-color: blueviolet;
+}
+
+.user-comments {
+  width: 641px;
+  height: 95px;
+  margin-left: 24px;
+  background-color: lightpink;
+}
+
+/* right column */
+
+.right-column {
+  margin-top: 56px;
+  width: 33%;
+  min-height: 1300px;
+  background-color: red;
+  float: right;
+}
+
+
+.suggest-head {
+  width: 100%;
+  height: 60px;
+  background-color: fuchsia;
+}
+
+/* thumbnail column */
+
+.top-thumbnail {
+  width: 100%;
+  height: 130px;
+  background-color: pink;
+}
+
+.thumbnails {
+  width: 50%;
+  height: 1212px;
+  background-color: teal;
+  float: left;
+}
+
+
+
+.other-thumbnails {
+  width: 100%;
+  height: 1100px;
+  background-color: tan;
+}
+
+.normal-thumbnails {
+  width: 100%;
+  height: 9.09%;
+  background-color: peachpuff;
+}
+
+/*thumb descriptions*/
+
+.thumb-descrips {
+  width: 50%;
+  height: 1212px;
+  background-color: navy;
+  float: right;
+}
+
+.top-descrips {
+  width: 100%;
+  height: 130px;
+  background-color: silver;
+}
+
+.other-descrips {
+  width: 100%;
+  height:1100px;
+}
+
+.normal-descrip {
+  width: 100%;
+  height: 9.09%;
+  background-color: gold;
 }
