--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,5 @@
+
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -54,7 +56,7 @@ table {
   position: fixed;
   height: 56px;
   width: 100%;
-  background-color: green;
+  background-color: white;
 }
 
 .left-header-buttons {
@@ -66,24 +68,53 @@ table {
 .three-bar-thingy {
   height: 100%;
   width: 20%;
-  background-color: grey;
   display: inline-block;
-  margin-left: 30px;
+  margin-left: 24px;
   float: left;
+}
+
+.three-bar-thingy img {
+  vertical-align: -28px;
 }
 
 .youtube-logo-button {
   height: 100%;
   width: 67%;
-  background-color: black;
   float: left;
+}
+
+.youtube-logo-button img {
+  vertical-align: -25px;
 }
 
 .search-bar {
   height: 100%;
   width: 57%;
   float: left;
-  background-color: seashell;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  top: 11px;
+  left: 2px;
+}
+
+.search-field-container {
+  width: 434px;
+  height: 26px;
+  padding: 2px 6px;
+  border: 1px solid rgb(204, 204, 204);
+}
+
+.submit-button {
+  border: 1px 1px 1px 0 solid rgb(204, 204, 204);
+  height: 32px;
+  width: 66px;
+  background-color: rgb(248, 248, 248);
+  padding: 1px 7px 2px 7px;
+  background-image: url(../assets/yt-search-submit-background.png)
 }
 
 .right-header-buttons {
