--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -108,6 +108,10 @@ table {
   border: 1px solid rgb(204, 204, 204);
 }
 
+.search-field-container input {
+  border: 0;
+}
+
 .submit-button {
   border: 1px 1px 1px 0 solid rgb(204, 204, 204);
   height: 32px;
