--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -30,8 +30,10 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 ol, ul {
 	list-style: none;
@@ -54,7 +56,7 @@ table {
 
 .header-bar {
   position: fixed;
-  height: 56px;
+  height: 58px;
   width: 100%;
   background-color: white;
 }
@@ -110,6 +112,15 @@ table {
 
 .search-field-container input {
   border: 0;
+  width: 434px;
+  height: 24px;
+  padding: 1px;
+  margin-left: 4px;
+  font-size: 16px;
+}
+
+.search-field-container input:focus {
+  outline: none;
 }
 
 .submit-button {
