--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -53,6 +53,7 @@ table {
 
 
 /* header bar */
+/**/
 
 .header-bar {
   position: fixed;
@@ -60,6 +61,8 @@ table {
   width: 100%;
   background-color: white;
 }
+
+/*left header bar*/
 
 .left-header-buttons {
   height: 100%;
@@ -88,6 +91,8 @@ table {
 .youtube-logo-button img {
   vertical-align: -25px;
 }
+
+/*search bar*/
 
 .search-bar {
   height: 100%;
@@ -129,8 +134,10 @@ table {
   width: 66px;
   background-color: rgb(248, 248, 248);
   padding: 1px 7px 2px 7px;
-  background-image: url(../assets/yt-search-submit-background.png)
+  background-image: url(../assets/magnifying-glass-2.png)
 }
+
+/*right side*/
 
 .right-header-buttons {
   height: 100%;
@@ -140,33 +147,30 @@ table {
 }
 
 /* left column */
+/**/
 
 .left-column {
   margin-top: 56px;
   width: 67%;
   height: 100%;
   min-height: 1300px;
-  background-color: blue;
   float: left;
 }
+
+/*video display and info*/
 
 .video-display {
   width: 100%;
   height: 482px;
-  background-color: orange;
 }
 
 .creator-info {
   width: 100%;
   height: 185px;
-  background-color: purple;
+
 }
 
-.comments {
-  width: 100%;
-  height: 637px;
-  background-color: yellow;
-}
+
 
 .video-player {
   margin-left: 24px;
@@ -178,15 +182,25 @@ table {
   margin-left: 24px;
   width: 641px;
   height: 93px;
-  background-color: brown;
+  border-bottom: 1px solid rgb(204, 204, 204);
 }
+
+
+.other-vid-deets {
+  width: 641px;
+  height: 55px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
 
 .channel-info {
   margin-left: 24px;
   padding-top: 23px;
   width: 641px;
   height: 38px;
-  background-color: turquoise;
+
 }
 
 .channel-text {
@@ -194,7 +208,35 @@ table {
   padding-top: 25px;
   width: 641px;
   height: 99px;
-  background-color: darkred;
+
+}
+
+.video-details h1 {
+  font-size: 18px;
+  vertical-align: -40px;
+  position: relative;
+  top: 18px;
+}
+
+.video-details p {
+  font-size: 14px;
+  color: #888888;
+  padding-top: 16px;
+}
+
+.video-details img {
+  width: 338px;
+  height: 38px;
+  position: relative;
+  top: 19px;
+}
+
+/*comment section*/
+
+.comments {
+  width: 100%;
+  height: 637px;
+  background-color: yellow;
 }
 
 .comment-interface{
