--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -52,8 +52,10 @@ table {
 	border-spacing: 0;
 }
 
-
+/**/
+/**/
 /* header bar */
+/**/
 /**/
 
 .header-bar {
@@ -64,7 +66,9 @@ table {
   z-index: 9999;
 }
 
+/**/
 /*left header bar*/
+/**/
 
 .left-header-buttons {
   height: 100%;
@@ -75,7 +79,6 @@ table {
 .three-bar-thingy {
   height: 100%;
   width: 20%;
-  display: inline-block;
   margin-left: 24px;
   float: left;
 }
@@ -94,7 +97,9 @@ table {
   vertical-align: -25px;
 }
 
+/**/
 /*search bar*/
+/**/
 
 .search-bar {
   height: 100%;
@@ -149,7 +154,10 @@ table {
   background-color: palegreen;
 }
 
+/**/
+/**/
 /* left column */
+/**/
 /**/
 
 .left-column {
@@ -160,18 +168,17 @@ table {
   float: left;
 }
 
+/**/
 /*video display and info*/
+/**/
+
+/*video display*/
 
 .video-display {
   width: 100%;
   height: 482px;
 }
 
-.creator-info {
-  width: 100%;
-  height: 185px;
-
-}
 
 
 
@@ -179,6 +186,14 @@ table {
   margin-left: 24px;
   padding-top: 24px;
   padding-right: 24px;
+}
+
+
+/*video details*/
+
+.creator-info {
+  width: 100%;
+  height: 185px;
 }
 
 .video-details {
@@ -218,6 +233,7 @@ table {
   top: 19px;
 }
 
+/*channel details*/
 
 .channel-info {
   margin-left: 24px;
@@ -289,7 +305,9 @@ table {
   top: 5px;
 }
 
+/**/
 /*comment section*/
+/**/
 
 .comments {
   width: 100%;
@@ -297,13 +315,14 @@ table {
 
 }
 
-
+/*commenting interface*/
 
 .comment-interface{
   width: 641px;
   padding-top: 17px;
   margin-left: 24px;
   height: 119px;
+  margin-bottom: 30px;
 }
 
 .comment-stats {
@@ -349,22 +368,53 @@ table {
   outline: none;
 }
 
-.comment-buttons {
-  height: 36px;
-  position: relative;
-  bottom: 
-  float: right;
-}
+/*existing comments*/
 
 .user-comments {
   width: 641px;
   height: 95px;
   margin-left: 24px;
-  background-color: lightpink;
 }
 
-/* right column */
+.comment-avs {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 55px;
+  border-radius: 50%;
+}
 
+.comment-dump-text {
+  width: 586px;
+  margin-left: 15px;
+  height: 95px;
+  float: right;
+}
+
+.commenter-name {
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.comment-date {
+  font-size: 12px;
+  font-weight: normal;
+  color: #999999;
+}
+
+.comment-text {
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.resbutts {
+  margin-top: 4px;
+}
+
+/**/
+/**/
+/* right column */
+/**/
+/**/
 .right-column {
   margin-top: 56px;
   width: 33%;
@@ -380,7 +430,9 @@ table {
   background-color: fuchsia;
 }
 
+/**/
 /* thumbnail column */
+/**/
 
 .top-thumbnail {
   width: 100%;
@@ -409,7 +461,9 @@ table {
   background-color: peachpuff;
 }
 
+/**/
 /*thumb descriptions*/
+/**/
 
 .thumb-descrips {
   width: 50%;
