--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -419,15 +419,28 @@ table {
   margin-top: 56px;
   width: 33%;
   min-height: 1300px;
-  background-color: red;
   float: right;
 }
 
 
 .suggest-head {
   width: 100%;
-  height: 60px;
-  background-color: fuchsia;
+  height: 34px;
+  margin-top: 24px;
+}
+
+.suggest-head span {
+  font-size: 16px;
+  position: relative;
+  top: 2px;
+  right: 1px;
+}
+
+.suggest-head img {
+  float: right;
+  position: relative;
+  bottom: 2px;
+  right: 25px;
 }
 
 /**/
@@ -436,14 +449,16 @@ table {
 
 .top-thumbnail {
   width: 100%;
-  height: 130px;
-  background-color: pink;
+  height: 95px;
+  padding-bottom: 14px;
+  margin-bottom: 16px;
+  border-bottom: 0.5px solid rgb(204, 204, 204);
 }
 
 .thumbnails {
   width: 50%;
   height: 1212px;
-  background-color: teal;
+
   float: left;
 }
 
@@ -452,13 +467,13 @@ table {
 .other-thumbnails {
   width: 100%;
   height: 1100px;
-  background-color: tan;
+
 }
 
 .normal-thumbnails {
   width: 100%;
   height: 9.09%;
-  background-color: peachpuff;
+
 }
 
 /**/
@@ -468,14 +483,16 @@ table {
 .thumb-descrips {
   width: 50%;
   height: 1212px;
-  background-color: navy;
   float: right;
 }
 
 .top-descrips {
-  width: 100%;
-  height: 130px;
-  background-color: silver;
+  width: 82%;
+  height: 95px;
+  margin-left: 7px;
+  padding-bottom: 14px;
+  margin-bottom: 16px;
+  border-bottom: 0.5px solid rgb(204, 204, 204);
 }
 
 .other-descrips {
@@ -484,7 +501,21 @@ table {
 }
 
 .normal-descrip {
-  width: 100%;
+  width: 75%;
+  margin-left: 7px;
   height: 9.09%;
-  background-color: gold;
+
+}
+
+.thumb-title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.thumb-poster, .extra-thumb-text {
+  font-size: 10px;
+  color: #999999;
+  font-size: 12px;
+  line-height: 1.5;
 }
